--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,10 +1,16 @@
-<div class="game-board">
-  <Breakout 
-    @width={{480}} 
-    @height={{320}} 
-    @paddleWidth={{75}} 
-    @brickRowCount={{3}} 
-    @brickColumnCount={{5}}
-    @ballRadius={{10}} 
-    @lives={{3}}  />
+<header>
+  <h2>Breakout</h2>
+</header>
+
+<div class="outer-div"> 
+  <div class="game-board">
+    <Breakout 
+      @width={{480}} 
+      @height={{320}} 
+      @paddleWidth={{75}} 
+      @brickRowCount={{3}} 
+      @brickColumnCount={{5}}
+      @ballRadius={{10}} 
+      @lives={{3}}  />
+  </div>
 </div>
