feat: add ability to specify fill colors for ball, paddle and bricks

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -11,6 +11,9 @@
       @brickRowCount={{3}} 
       @brickColumnCount={{5}}
       @ballRadius={{10}} 
+      @brickFillStyle='#0095DD'
+      @ballFillStyle='#0095DD'
+      @paddleFillStyle='#0095DD'
       @lives={{3}}  />
   </div>
 </div>
