fix: on click modifer action was not renamed to this.playGame

--- a/addon/components/breakout.hbs
+++ b/addon/components/breakout.hbs
@@ -4,7 +4,7 @@
   </div>
   <canvas width={{this.width}} height={{this.height}} {{did-insert this.initGame}} />
   <div>
-    <button type="button" role="button" class="game-button" {{on "click" this.newGame passive=true}}>
+    <button type="button" role="button" class="game-button" {{on "click" this.playGame passive=true}}>
       New Game</button>
   </div>
 </div>
